[core] Complete collection, restore, and dashboard